# tauri-plugin-usagestats

./: .prettierignore  Cargo.toml  README.md  build.rs  package.json  rollup.config.js
android/: .gitignore  build.gradle.kts
android/src/androidTest/java/: UsageStatsInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: UsageStats.kt  UsageStatsPlugin.kt
android/src/test/java/: UsageStatsUnitTest.kt
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_stats_for_range.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
