[package]
name = "tauri-plugin-usagestats"
version = "0.1.0"
authors = ["Jack Weilage"]
description = "A Tauri plugin to interact with the Android UsageStats API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jack-weilage/tauri-plugin-usagestats"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-usagestats"

[dependencies]
tauri = { version = "2.4.1" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.1.1", features = ["build"] }
tauri-build = "2.1.1"
